cmake_minimum_required(VERSION 3.28)
project(assignment_data_structures)

set(CMAKE_CXX_STANDARD 14)

add_executable(
        main.cpp
        test.cpp
        main.cpp
        main.cpp
        linkedQueue.h
        Array_Based_Queue.h
        Student.cpp
        Student.h
        SORTING/insertion_sort.h
        SORTING/quick_sort.h
        SORTING/selection_sort.h
        SORTING/Sort.h
)
